--- a/versions/v1.0.md
+++ b/versions/v1.0.md
@@ -1,1 +1,10 @@
-placeholder
+# Version v1.0
+
+This version includes the initial release of the **Structured Intelligence whitepaper** with a full explanation of the new paradigm, core components, and formal models. It includes the following:
+
+- Core components of **SPU**, **World-OS**, **StructureOS**, **SEF**, **Multi-Agent Framework**, and **KnowledgeOps**.
+- Detailed **SPU ISA** (Structured Intelligence Instruction Set) and **Mathematical Appendix**.
+- **Case Study** demonstrating the practical application of Structured Intelligence in strategic decision-making.
+
+## Changes in v1.0
+- First public release.
